att carousel, e add conteudo nas play da conta

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 </label>
             </div>
             <div id="box-perfil">
-                <p class="subTitle">nome do perfil</p>
+                <p class="subTitle">Matheus eduardo</p>
                 <div id="perfil">
                     <img src="https://img.icons8.com/material-sharp/24/000000/user.png" alt="user"/>
                 </div>
@@ -53,19 +53,19 @@
                 <div id="box-playlists">
                     <h1 class="subTitle">Playlists:</h1>
                     <div class="playlists">
-                        <div class="box-image-playlist">
-                            <img class="image-playlist" src="" alt="">
+                        <div class="box-image-playlist" style="background-image: url(./imgs/Playlist-Denton.jpg); background-size: cover; background-position: center center;">
+                            <img class="image-playlist" src="" alt=""> 
                         </div>
                         <div class="info">
                             <div class="name-And-config">
-                                <p class="name subTitle">Nome da playlist</p>
+                                <p class="name subTitle">Apenas rock</p>
                                 <svg class="icon-mais" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"  viewBox="0 0 24 24">
                                     <path fill-rule="evenodd" d="M 11 2 L 11 11 L 2 11 L 2 13 L 11 13 L 11 22 L 13 22 L 13 13 L 22 13 L 22 11 L 13 11 L 13 2 Z"></path>
                                 </svg>
                             </div>
                             <div class="musics-And-duration">
                                 <p class="musics textInfo">19 Musicas</p>
-                                <p class="duration textInfo">Duração: 22:22</p>
+                                <p class="duration textInfo">Duração: 23:21</p>
                             </div>
                         </div>
                     </div>
@@ -136,14 +136,14 @@
                 </svg>
             </div>
             <div class="playlists-rec">
-                <div class="box-image-playlist-rec">
+                <div class="box-image-playlist-rec" style="background-image: url(./imgs/119453247a42c325e6612fbbd2e743ee.jpg); background-size: cover; background-position: center center;">
                     <img class="image-playlist-rec" src="" alt="">
                 </div>
                 <div class="info-rec">
                     <div class="name-and-musics">
-                        <p class="name-rec subTitle">Nome da playlist</p>
-                        <p class="name-usuario textInfo" >nome do usuario</p>
-                        <p class="musics-rec textInfo">19 Musicas</p>
+                        <p class="name-rec subTitle">MPB BRASIL</p>
+                        <p class="name-usuario textInfo">MarcosRS</p>
+                        <p class="musics-rec textInfo">43 Musicas</p>
                     </div>
                     <div class="status-rec">
                         <div class="flex-rec">
@@ -163,7 +163,7 @@
                             <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="64" height="64" viewBox="0 0 64 64">
                                 <path d="M 32 6 C 17.641 6 6 17.641 6 32 C 6 46.359 17.641 58 32 58 C 46.359 58 58 46.359 58 32 C 58 17.641 46.359 6 32 6 z M 32 10 C 44.15 10 54 19.85 54 32 C 54 44.15 44.15 54 32 54 C 19.85 54 10 44.15 10 32 C 10 19.85 19.85 10 32 10 z M 30.5 14 L 31 18 L 33 18 L 33.5 14 L 30.5 14 z M 44.021484 18.564453 L 33.25 28.203125 A 4 4 0 0 0 32 28 A 4 4 0 0 0 32 36 A 4 4 0 0 0 32.722656 35.931641 L 40.816406 42.638672 L 42.640625 40.816406 L 35.931641 32.720703 A 4 4 0 0 0 35.796875 30.75 L 45.435547 19.978516 L 44.021484 18.564453 z M 14 30.5 L 14 33.5 L 18 33 L 18 31 L 14 30.5 z M 50 30.5 L 46 31 L 46 33 L 50 33.5 L 50 30.5 z M 31 46 L 30.5 50 L 33.5 50 L 33 46 L 31 46 z"></path>
                             </svg>
-                            <p class="textInfo">22:33</p>
+                            <p class="textInfo">02:33:06</p>
                         </div>
                     </div>
                 </div>
